--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.3</version> <!-- Kullanılan sürümü uygun bir şekilde güncelleyin -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
