--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,66 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>1.11.3</version>
+				<configuration>
+						<workingDirectory>frontend</workingDirectory>
+						<installDirectory>target</installDirectory>
+				</configuration>
+				<executions>
+						<execution>
+								<id>install node and npm</id>
+								<goals>
+										<goal>install-node-and-npm</goal>
+								</goals>
+								<configuration>
+										<nodeVersion>v16.20.0</nodeVersion>
+										<npmVersion>8.19.4</npmVersion>
+								</configuration>
+						</execution>
+						<execution>
+								<id>npm install</id>
+								<goals>
+										<goal>npm</goal>
+								</goals>
+								<configuration>
+										<arguments>install</arguments>
+								</configuration>
+						</execution>
+						<execution>
+								<id>npm run build</id>
+								<goals>
+										<goal>npm</goal>
+								</goals>
+								<configuration>
+										<arguments>run build</arguments>
+								</configuration>
+						</execution>
+				</executions>
+		</plugin>
+
+		<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<executions>
+						<execution>
+							<?m2e execute onConfiguration?>
+								<phase>generate-resources</phase>
+								<configuration>
+										<target>
+												<copy todir="${project.build.directory}/classes/public">
+														<fileset dir="${project.basedir}/frontend/build"/>
+												</copy>
+										</target>
+								</configuration>
+								<goals>
+										<goal>run</goal>
+								</goals>
+						</execution>
+				</executions>
+		</plugin>
 		</plugins>
 	</build>
 
